--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.11.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
