--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation "org.ocpsoft.prettytime:prettytime:4.0.3.Final"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation "com.squareup.retrofit2:converter-gson:2.7.1"
